<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sortedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51D4D5D4"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sortBig"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/alphabet_increase"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/alphabet_increase"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/alphabet_decrease"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/alphabet_decrease"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/value_increase"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/value_increase"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/value_decrease"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="35dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/value_decrease"
            app:cornerRadius="15dp" />

    </LinearLayout>
</FrameLayout>